<resources>
    <string name="app_name">路路通</string>
    <string name="login">登录</string>
    <string name="rigester_button">还没有账号？注册</string>
    <string name="todo">TODO</string>
    <string name="forget_password">忘记密码</string>
    <string name="personal_center_icon_title">个人中心</string>
    <string name="title_activity_buttom_nav">路路通</string>
    <string name="title_home">首页</string>
    <string name="my_business">我的业务</string>
    <string name="business_hall">业务大厅</string>
    <string name="personal_center">个人中心</string>
</resources>