<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_homepage"
        android:name="com.example.lulutong.ui.BottomNavActivity.HomePage.HomePageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_homepage" />

    <fragment
        android:id="@+id/navigation_my_business"
        android:name="com.example.lulutong.ui.BottomNavActivity.MyBusiness.MyBusinessFragment"
        android:label="@string/my_business"
        tools:layout="@layout/fragment_my_business" />

    <fragment
        android:id="@+id/navigation_business_hall"
        android:name="com.example.lulutong.ui.BottomNavActivity.BusinessHall.BusinessHallFragment"
        android:label="@string/business_hall"
        tools:layout="@layout/fragment_business_hall" />

    <fragment
        android:id="@+id/navigation_personal_center"
        android:name="com.example.lulutong.ui.BottomNavActivity.PersonalCenter.PersonalCenterFragment"
        android:label="@string/personal_center"
        tools:layout="@layout/personal_center_fragment"/>
</navigation>